--- a/19.09.2017/index.html
+++ b/19.09.2017/index.html
@@ -26,41 +26,25 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav navbar-light">
                         <li class="nav-item  ">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" style="font-size:25px" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" style="font-size:25px" href="#">About</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link" href="#">Services</a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="#">Design </a>
-                                </li>
-                                <li>
-                                    <a href="#">Programming</a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a href="#">Latest</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Archive</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#">Copywriting</a>
-                                </li>
-                                <li>
-                                    <a href="#">Optimization</a>
-                                </li>
-                            </ul>
+                        <li class="nav-item dropdown show">
+                            <a class="nav-link " style="font-size:25px" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+                            <div class="dropdown-menu" style=" background-color: #8dbf41" aria-labelledby="dropdownMenuLink">
+                                <a class="dropdown-item" href="#">Design</a>
+                                <a class="dropdown-item" href="#">Programming</a>
+                                <a class="dropdown-item" href="#">Copywriting</a>
+                                <a class="dropdown-item" href="#">Optimization</a>
+                              </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="#">Blog</a>
+                            <a class="nav-link " style="font-size:25px" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="#">Contacts</a>
+                            <a class="nav-link " style="font-size:25px" href="#">Contacts</a>
                         </li>
                     </ul>
                 </div>
@@ -106,6 +90,8 @@
         </div>
     </div>
     <!--   section2-->
+
+    <!--   section3-->
     <div class="sc3">
         <h3>Our Great Features:</h3>
         <div class="container-fluid">
@@ -180,6 +166,9 @@
             </div>
         </div>
     </div>
+    <!--   section3--> 
+
+    <!--   section4-->
     <div class="sc4">
         <div class="container">
             <div class="well">
@@ -189,6 +178,9 @@
             </div>
         </div>
     </div>
+
+    <!--   section4-->
+
     <!--    section 5-->
 <div class="container text-center">
                 <h3 class="sc5_title">Meet Our Team</h3>
