--- a/19.09.2017/index.html
+++ b/19.09.2017/index.html
@@ -31,9 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link" style="font-size:25px" href="#">About</a>
                         </li>
-                        <li class="nav-item dropdown show">
+                        <li class="nav-item dropdown">
                             <a class="nav-link " style="font-size:25px" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
-                            <div class="dropdown-menu" style=" background-color: #8dbf41" aria-labelledby="dropdownMenuLink">
+                            <div class="dropdown-menu dontshowClass" style=" background-color: #8dbf41" aria-labelledby="dropdownMenuLink">
                                 <a class="dropdown-item" href="#">Design</a>
                                 <a class="dropdown-item" href="#">Programming</a>
                                 <a class="dropdown-item" href="#">Copywriting</a>
@@ -52,6 +52,58 @@
         </div>
 
     </header>
+        <!--   section1-->
+
+    <div class="photo">
+        
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="overlayPhoto"></div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="./img/slide-1.jpg" alt="First slide">
+                    <div class="slideContent">
+                            <h2>Save your time and money with us!</h2>
+                            <p class="h5">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco.</p>
+                            <a href="#" class="btn btn-info">Join Our Team</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="./img/slide-2.jpg" alt="Second slide">
+                    <div class="slideContent">
+                            <h2>Save your time and money with us!</h2>
+                            <p class="h5">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco.</p>
+                            <a href="#" class="btn btn-info">Join Our Team</a>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="./img/slide-3.jpg" alt="Third slide">
+                    <div class="slideContent">
+                            <h2>Save your time and money with us!</h2>
+                            <p class="h5">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco.</p>
+                            <a href="#" class="btn btn-info">Join Our Team</a>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="fa fa-angle-double-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="fa fa-angle-double-right " aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+
+    <!--   section1-->
+
+
     <!--   section2-->
     <div class="container">
        <div class="sc2_cercive">
