--- a/19.09.2017/index.html
+++ b/19.09.2017/index.html
@@ -53,7 +53,8 @@
 
     </header>
         <!--   section1-->
-
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-lg-12">
     <div class="photo">
         
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -100,7 +101,8 @@
             </a>
         </div>
     </div>
-
+</div>
+</div>
     <!--   section1-->
 
 
